--- a/kubernetes/nfs/class.yaml
+++ b/kubernetes/nfs/class.yaml
@@ -2,6 +2,9 @@ kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
   name: persistent
+  annotations:
+    storageclass.kubernetes.io/is-default-class: "true"
+
 provisioner: nfs
 mountOptions:
   - vers=4.1
