Modify NFS deployment

--- a/kubernetes/nfs/deployment.yaml
+++ b/kubernetes/nfs/deployment.yaml
@@ -23,45 +23,7 @@ spec:
   selector:
     app: nfs-provisioner
 ---
-kind: Pod
-apiVersion: v1
-metadata:
-  name: nfs-provisioner
-spec:
-  serviceAccount: nfs-provisioner
-  containers:
-    - name: nfs-provisioner
-      image: quay.io/kubernetes_incubator/nfs-provisioner:latest
-      ports:
-        - name: nfs
-          containerPort: 2049
-        - name: mountd
-          containerPort: 20048
-        - name: rpcbind
-          containerPort: 111
-        - name: rpcbind-udp
-          containerPort: 111
-          protocol: UDP
-      securityContext:
-        privileged: true
-      args:
-        - "-provisioner=nfs"
-        - "-grace-period=0"
-      env:
-        - name: POD_IP
-          valueFrom:
-            fieldRef:
-              fieldPath: status.podIP
-      imagePullPolicy: "IfNotPresent"
-      volumeMounts:
-        - name: export-volume
-          mountPath: /export
-  volumes:
-    - name: export-volume
-      hostPath:
-        path: /srv
----
-kind: Deployment
+kind: StatefulSet
 apiVersion: apps/v1
 metadata:
   name: nfs-provisioner
@@ -69,15 +31,15 @@ spec:
   selector:
     matchLabels:
       app: nfs-provisioner
+  serviceName: "nfs-provisioner"
   replicas: 1
-  strategy:
-    type: Recreate 
   template:
     metadata:
       labels:
         app: nfs-provisioner
     spec:
       serviceAccount: nfs-provisioner
+      terminationGracePeriodSeconds: 10
       containers:
         - name: nfs-provisioner
           image: quay.io/kubernetes_incubator/nfs-provisioner:latest
@@ -92,7 +54,6 @@ spec:
               containerPort: 111
               protocol: UDP
           securityContext:
-            privileged: true
             capabilities:
               add:
                 - DAC_READ_SEARCH
