--- a/storage/kubernetes/nfs/test/test-pvc.yaml
+++ b/storage/kubernetes/nfs/test/test-pvc.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-claim
+  name: nfs-test
 spec:
-  storageClassName: persistent
+  storageClassName: nfs-sc
   accessModes:
     - ReadWriteMany
   resources:
