--- a/monitoring/grafana-config-values.yaml
+++ b/monitoring/grafana-config-values.yaml
@@ -22,9 +22,9 @@ persistence:
  accessModes:
    - ReadWriteOnce
  ## Use a StorageClass
- storageClassName: nfs-sc
+ storageClassName: example-nfs
  ## Create a PersistentVolumeClaim of 10Gi
- size: 10Gi
+ size: 8Gi
  ## Use an existing PersistentVolumeClaim (my-pvc)
  #existingClaim: my-pvc
 
