--- a/kubernetes/network/ingress-test/banana-nodeport.yaml
+++ b/kubernetes/network/ingress-test/banana-nodeport.yaml
@@ -1,11 +1,11 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: apple-nodeport
+  name: banana-nodeport
 spec:
   type: NodePort
   selector:
-    app: apple
+    app: banana
   ports:
     - port: 5678 # Default port for image
 
