--- a/kubernetes/dashboard/kubernetes-dashboard.yaml
+++ b/kubernetes/dashboard/kubernetes-dashboard.yaml
@@ -1,17 +1,3 @@
-# Copyright 2017 The Kubernetes Authors.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -29,6 +15,16 @@ metadata:
 
 ---
 
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  labels:
+    k8s-app: kubernetes-dashboard
+  name: dashboard-admin
+  namespace: kube-system
+
+---
+
 kind: Service
 apiVersion: v1
 metadata:
@@ -39,9 +35,22 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: 80
+    - port: 8443
+      nodePort: 30001
+     # targetPort: 8443
   selector:
     k8s-app: kubernetes-dashboard
+
+---
+
+apiVersion: v1
+kind: Secret
+metadata:
+  labels:
+    k8s-app: kubernetes-dashboard
+  name: kubernetes-dashboard-certs
+  namespace: kubernetes-dashboard
+type: Opaque
 
 ---
 
@@ -156,6 +165,21 @@ subjects:
 
 ---
 
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: dashboard-admin
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cluster-admin
+subjects:
+  - kind: ServiceAccount
+    name: dashboard-admin
+    namespace: kube-system
+
+---
+
 kind: Deployment
 apiVersion: apps/v1
 metadata:
@@ -176,25 +200,29 @@ spec:
     spec:
       containers:
         - name: kubernetes-dashboard
-          image: kubernetesui/dashboard:v2.0.0-rc1
+          image: kubernetesui/dashboard:v2.0.0-beta8
+          imagePullPolicy: Always
           ports:
-            - containerPort: 9090
+            - containerPort: 8443
               protocol: TCP
           args:
+            - --auto-generate-certificates
             - --namespace=kubernetes-dashboard
-            - --enable-insecure-login
-          # Uncomment the following line to manually specify Kubernetes API server Host
-          # If not specified, Dashboard will attempt to auto discover the API server and connect
-          # to it. Uncomment only if the default does not work.
-          # - --apiserver-host=http://my-address:port
+            # Uncomment the following line to manually specify Kubernetes API server Host
+            # If not specified, Dashboard will attempt to auto discover the API server and connect
+            # to it. Uncomment only if the default does not work.
+            # - --apiserver-host=http://my-address:port
           volumeMounts:
-            # Create on-disk volume to store exec logs
+            - name: kubernetes-dashboard-certs
+              mountPath: /certs
+              # Create on-disk volume to store exec logs
             - mountPath: /tmp
               name: tmp-volume
           livenessProbe:
             httpGet:
+              scheme: HTTPS
               path: /
-              port: 9090
+              port: 8443
             initialDelaySeconds: 30
             timeoutSeconds: 30
           securityContext:
@@ -203,6 +231,9 @@ spec:
             runAsUser: 1001
             runAsGroup: 2001
       volumes:
+        - name: kubernetes-dashboard-certs
+          secret:
+            secretName: kubernetes-dashboard-certs
         - name: tmp-volume
           emptyDir: {}
       serviceAccountName: kubernetes-dashboard
@@ -223,9 +254,9 @@ metadata:
   name: dashboard-metrics-scraper
   namespace: kubernetes-dashboard
 spec:
-  type: NodePort
   ports:
     - port: 8000
+      targetPort: 8000
   selector:
     k8s-app: dashboard-metrics-scraper
 
@@ -282,3 +313,6 @@ spec:
       volumes:
         - name: tmp-volume
           emptyDir: {}
+
+
+
