--- a/kubernetes/dashboard/kubernetes-dashboard-tls.yaml
+++ b/kubernetes/dashboard/kubernetes-dashboard-tls.yaml
@@ -208,6 +208,10 @@ spec:
           args:
             - --auto-generate-certificates
             - --namespace=kubernetes-dashboard
+            - --auto-generate-certificates=false
+            - --authentication-mode=token,basic
+            - --tls-cert-file=/tmp/tls.crt
+            - --tls-key-file=/tmp/tls.key
             # Uncomment the following line to manually specify Kubernetes API server Host
             # If not specified, Dashboard will attempt to auto discover the API server and connect
             # to it. Uncomment only if the default does not work.
