--- a/storage/helm/nfs/nfs-values.yaml
+++ b/storage/helm/nfs/nfs-values.yaml
@@ -8,7 +8,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/kubernetes_incubator/nfs-provisioner
-  tag: v2.2.1-k8s1.12
+  tag: latest
   pullPolicy: IfNotPresent
 
 service:
@@ -36,7 +36,7 @@ persistence:
   # storageClass: "-"
 
   accessMode: ReadWriteMany
-  size: 20Gi
+  size: 1Gi
 
 ## For creating the StorageClass automatically:
 storageClass:
